# workspace_sandbox

./: .gitignore  .pubignore  CHANGELOG.md  README.md  pubspec.yaml
example/: cli_repl_sandboxed.dart  cli_sandboxed.dart  cli_unsandboxed.dart  main.dart
lib/src/: workspace_impl.dart
lib/src/core/: launcher_service.dart
lib/src/models/: command_result.dart  workspace_options.dart  workspace_process.dart
lib/src/native/: ffi_bridge.dart  native_binding.dart  native_loader.dart
lib/src/util/: shell_parser.dart
native/: CMakeLists.txt
native/include/: workspace_core.h
native/src/: workspace_core.cpp
native/src/common/: internal_api.h  utils.cpp
native/src/linux/: process_linux.cpp
native/src/windows/: process_win.cpp
test/integration/: concurrency_test.dart  core_integration_test.dart  django_scenario_test.dart  sandbox_test.dart  security_test.dart  streaming_test.dart
test/unit/: command_result_test.dart  shell_parser_test.dart
